# dm_test

./: .gitignore  manage.py  pyproject.toml
dashamail_project/: asgi.py  settings.py  urls.py  wsgi.py
services/dashamail/: exceptions.py  schemas.py  send_mail.py  tests.py
