[tool.poetry]
name = "dashamail-project"
version = "0.1.0"
description = ""
authors = ["alimandev <aliman@ptolemay.com>"]
readme = "README.md"
packages = [{include = "dashamail_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
requests = "^2.31.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
